--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,12 @@ dependencies:
   cloud_firestore: ^4.13.6
   firebase_storage: ^11.5.6
   provider: ^6.1.1
+  image_picker: ^1.0.7
+  collection: ^1.16.0
+  image: ^3.0.2
+  tflite: ^1.1.2
+  camera: ^0.10.5+9
+
   
 
 dev_dependencies:
@@ -71,6 +77,7 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
+    - assets/
     - assets/data.json
     - assets/page-1/images/vector.png
     - assets/page-1/images/vector-avg.png
