--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   image: ^3.0.2
   tflite: ^1.1.2
   camera: ^0.10.5+9
+  google_mlkit_image_labeling: ^0.9.0
 
   
 
@@ -77,7 +78,8 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-    - assets/
+    - assets/labels.txt
+    - assets/model_unquant.tflite
     - assets/data.json
     - assets/page-1/images/vector.png
     - assets/page-1/images/vector-avg.png
